// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createBlocUser: index mapStateToProps with errors 1`] = `
Object {
  "errors": undefined,
  "isOpen": true,
}
`;

exports[`createBlocUser: index mapStateToProps without errors 1`] = `
Object {
  "errors": undefined,
  "isOpen": true,
}
`;

exports[`createBlocUser: index render component with values 1`] = `
"<div className=\\"smd-pad-16\\">
  <Blueprint.Button onClick={[Function: onClick]} className=\\"pt-intent-primary pt-icon-add\\" id=\\"accounts-create-user-button\\" text=\\"Create User\\" />
  <Blueprint.Dialog iconName=\\"inbox\\" isOpen={false} onClose={[Function: mockConstructor]} title=\\"Create New User\\" className=\\"pt-dark\\" canOutsideClickClose={true}>
    <form>
      <div className=\\"pt-dialog-body bloc-user-form\\">
        <div className=\\"pt-form-group\\">
          <div className=\\"pt-form-group pt-intent-danger\\">
            <label className=\\"pt-label\\" htmlFor=\\"input-a\\">
              Username
            </label>
            <div className=\\"pt-form-content\\">
              <Field name=\\"username\\" component=\\"input\\" type=\\"text\\" placeholder=\\"Username\\" className=\\"pt-input form-width\\" tabIndex=\\"1\\" required={true} />
              <div className=\\"pt-form-helper-text\\">
                Username Required
              </div>
            </div>
          </div>
          <div className=\\"pt-form-group pt-intent-danger\\">
            <label className=\\"pt-label\\" htmlFor=\\"input-b\\">
              Password
            </label>
            <div className=\\"pt-form-content\\">
              <Field name=\\"password\\" component=\\"input\\" type=\\"password\\" placeholder=\\"Password\\" className=\\"pt-input form-width\\" tabIndex=\\"2\\" required={true} />
              <div className=\\"pt-form-helper-text\\">
                Password Required
              </div>
            </div>
          </div>
          <div className=\\"pt-form-group pt-intent-danger\\">
            <label className=\\"pt-label\\" htmlFor=\\"input-b\\">
              Confirm Password
            </label>
            <div className=\\"pt-form-content\\">
              <Field name=\\"confirm_password\\" component=\\"input\\" type=\\"password\\" placeholder=\\"Confirm Password\\" className=\\"pt-input form-width\\" tabIndex=\\"3\\" required={true} />
              <div className=\\"pt-form-helper-text\\">
                Must Confirm Password
              </div>
            </div>
          </div>
        </div>
        <div>
          <div className=\\"col-sm-3\\" />
          <div className=\\"col-sm-3\\" />
          <div className=\\"col-sm-3\\" />
        </div>
      </div>
      <div className=\\"pt-dialog-footer\\">
        <div className=\\"pt-dialog-footer-actions\\">
          <Blueprint.Button text=\\"Cancel\\" onClick={[Function: onClick]} />
          <Blueprint.Button intent={0} onClick={[Function]} text=\\"Create User\\" />
        </div>
      </div>
    </form>
  </Blueprint.Dialog>
</div>"
`;

exports[`createBlocUser: index render component without values 1`] = `
"<div className=\\"smd-pad-16\\">
  <Blueprint.Button onClick={[Function: onClick]} className=\\"pt-intent-primary pt-icon-add\\" id=\\"accounts-create-user-button\\" text=\\"Create User\\" />
  <Blueprint.Dialog iconName=\\"inbox\\" isOpen={false} onClose={[Function: mockConstructor]} title=\\"Create New User\\" className=\\"pt-dark\\" canOutsideClickClose={true}>
    <form>
      <div className=\\"pt-dialog-body bloc-user-form\\">
        <div className=\\"pt-form-group\\">
          <div className=\\"pt-form-group pt-intent-danger\\">
            <label className=\\"pt-label\\" htmlFor=\\"input-a\\">
              Username
            </label>
            <div className=\\"pt-form-content\\">
              <Field name=\\"username\\" component=\\"input\\" type=\\"text\\" placeholder=\\"Username\\" className=\\"pt-input form-width\\" tabIndex=\\"1\\" required={true} />
              <div className=\\"pt-form-helper-text\\" />
            </div>
          </div>
          <div className=\\"pt-form-group pt-intent-danger\\">
            <label className=\\"pt-label\\" htmlFor=\\"input-b\\">
              Password
            </label>
            <div className=\\"pt-form-content\\">
              <Field name=\\"password\\" component=\\"input\\" type=\\"password\\" placeholder=\\"Password\\" className=\\"pt-input form-width\\" tabIndex=\\"2\\" required={true} />
              <div className=\\"pt-form-helper-text\\" />
            </div>
          </div>
          <div className=\\"pt-form-group pt-intent-danger\\">
            <label className=\\"pt-label\\" htmlFor=\\"input-b\\">
              Confirm Password
            </label>
            <div className=\\"pt-form-content\\">
              <Field name=\\"confirm_password\\" component=\\"input\\" type=\\"password\\" placeholder=\\"Confirm Password\\" className=\\"pt-input form-width\\" tabIndex=\\"3\\" required={true} />
              <div className=\\"pt-form-helper-text\\" />
            </div>
          </div>
        </div>
        <div>
          <div className=\\"col-sm-3\\" />
          <div className=\\"col-sm-3\\" />
          <div className=\\"col-sm-3\\" />
        </div>
      </div>
      <div className=\\"pt-dialog-footer\\">
        <div className=\\"pt-dialog-footer-actions\\">
          <Blueprint.Button text=\\"Cancel\\" onClick={[Function: onClick]} />
          <Blueprint.Button intent={0} onClick={[Function]} text=\\"Create User\\" />
        </div>
      </div>
    </form>
  </Blueprint.Dialog>
</div>"
`;

exports[`createBlocUser: index validate when password does not match 1`] = `
Object {
  "confirm_password": "Passwords Do Not Match",
}
`;

exports[`createBlocUser: index validate with empty values 1`] = `
Object {
  "confirm_password": "Must Confirm Password",
  "password": "Password Required",
  "username": "Username Required",
}
`;

exports[`createBlocUser: index validate with values 1`] = `Object {}`;
